--- a/src/Http.Messenger.Test/Http.Messenger.Test.csproj
+++ b/src/Http.Messenger.Test/Http.Messenger.Test.csproj
@@ -14,7 +14,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Http.client\Http.client.csproj" />
+    <ProjectReference Include="..\Http.Messenger\Http.Messenger.csproj" />
   </ItemGroup>
 
 </Project>
