--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,8 @@
 *.nuspec
 *.dtbcache
 
-/src/test.server/obj/
+/test.server/test.server/bin/
+/test.server/test.server/obj/
+/test.server/packages/
 /src/HttpSender.Test/obj/
 /src/.vs/
