--- a/test.server/test.server/Web.config
+++ b/test.server/test.server/Web.config
@@ -54,7 +54,7 @@
     </assemblyBinding>
   </runtime>
   <system.webServer>
-    <modules runAllManagedModulesForAllRequests="true" runManagedModulesForWebDavRequests="true"> 
+    <modules runAllManagedModulesForAllRequests="true"> 
       <remove name="WebDAVModule" />
       <remove name="TelemetryCorrelationHttpModule"/>
       <add name="TelemetryCorrelationHttpModule"
