--- a/.gitignore
+++ b/.gitignore
@@ -25,8 +25,8 @@
 /test.server/ApiServer/ApiServer/obj/
 
 
-/src/netstandard/HttpSender/obj/
-/src/netstandard/HttpSender.Test/obj/
-/src/netstandard/Performance.Test/obj/
-/src/netstandard/Performance.Test/bin/
-/src/netstandard/.vs/
+/src/HttpSender/obj/
+/src/HttpSender.Test/obj/
+/src/Performance.Test/obj/
+/src/Performance.Test/bin/
+/src/.vs/
